kubernetes/statefulset-with-ingress-and-full-volume/02-butterfly-centos-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: butterfly-centos-full-volume
spec:
  serviceName: butterfly-centos-full-volume
  selector:
    matchLabels:
      app: butterfly-centos-full-volume
  replicas: 1
  template:
    metadata:
      labels:
        app: butterfly-centos-full-volume
    spec:
      containers:
      - name: butterfly-centos-full-volume
        image: tmatsuo/butterfly-centos
        readinessProbe:
          httpGet:
            path: /term/
            port: 80
        volumeMounts:
        - name: butterfly-centos-full-volume
          mountPath: "/volume"
        - name: butterfly-centos-full-volume
          subPath: "root"
          mountPath: "/root"
        - name: butterfly-centos-full-volume
          subPath: "usr"
          mountPath: "/usr"
        - name: butterfly-centos-full-volume
          subPath: "etc"
          mountPath: "/etc"
        - name: butterfly-centos-full-volume
          subPath: "var"
          mountPath: "/var"
        - name: butterfly-centos-full-volume
          subPath: "run"
          mountPath: "/run"
        - name: butterfly-centos-full-volume
          subPath: "home"
          mountPath: "/home"
        - name: butterfly-centos-full-volume
          subPath: "opt"
          mountPath: "/opt"
        - name: butterfly-centos-full-volume
          subPath: "srv"
          mountPath: "/srv"
      volumes:
      - name: butterfly-centos-full-volume
        persistentVolumeClaim:
          claimName: butterfly-centos-full-volume
