kubernetes/statefulset-with-ingress-and-full-volume/03-butterfly-centos-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: butterfly-centos-full-volume
spec:
  selector:
    app: butterfly-centos-full-volume
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
