kubernetes/statefulset-with-ingress-and-full-volume/04-butterfly-centos-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: butterfly-centos-full-volume
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
#  tls:
#  - hosts:
#    - butterfly-full-volume.example.com
#    secretName: my-ingress-tls
  rules:
  - host: butterfly-full-volume.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: butterfly-centos-full-volume
            servicePort: 80
